# wsgigo

./: LICENSE  LICENSE.txt  README.md  README.rst  pyproject.toml  setup.cfg  setup.py
.github/workflows/: python-app.yml  python-publish.yml
examples/: example-flask.py
tests/: test_Router.py
wsgigo/: __init__.py
